# scct_predictions

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: windows-build.yml
scct_predictions/: __main__.py  config.py  scct.py
scct_predictions/templates/: _formhelpers.html  config.html  config_success.html
windows/: README.txt  install.bat  python312._pth  run.bat  run_debug.bat
windows/data/: install.ps1
